--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta charset="UTF-8">
   <script src="https://kit.fontawesome.com/c6191b4f04.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
