--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <div class="image1"></div>    
         <div class="Step">step1</div>
         <h3>タイトルが入ります</h3>
-        <p>文章が入ります<br>文章が入ります</p>
+        <p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
       </div>
       <div class="box">
         <div class="image2"></div>    
         <div class="Step">step2</div>
         <h3>タイトルが入ります</h3>
-        <p>文章が入ります<br>文章が入ります</p>
+        <p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
       </div>
       <div class="box">
         <div class="image3"></div>
         <div class="Step">step3</div>
         <h3>タイトルが入ります</h3>
-        <p>文章が入ります<br>文章が入ります</p>
+        <p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
         </div>
     </main>
     <footer>
